--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 .link-item {
     margin: right 0;
     padding-right: 0;
+    margin: 30px;
 }
 .link {
     display: inline-block;
@@ -17,8 +18,6 @@
     padding-right: .625rem;
     padding-left: .625rem;
 }
-
-
 .link a {
     text-decoration: none;
     color: black;
@@ -404,11 +403,7 @@
     margin: 0 auto;
     height: 100%;
     margin-bottom: 80px;
-    
-
-
 }
-
 
 .container1 img {
     width: 100%;
@@ -460,9 +455,19 @@
     list-style: none;
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    
+}
+.register{
+    margin: 30px;
+    margin-right: 35px;
+    margin-left: -20px;
     
 }
+.register img{
+    padding: 2px;
+    margin: 2px;
+    
+}
+
 .register3{
     grid-column: 3/ span 3;
 }
@@ -478,8 +483,6 @@
 .register2{
     display: inline-block;
     margin-top: -30px;
-    /* margin-left: 95px;
-    margin-right: 95px; */
 
 }
 .register2 ul{
@@ -491,24 +494,29 @@
 }
 .register2 h2{
     font-size: 20px;
+    
 }
 .register3{
     line-height: 1.5;
     margin-top: -30px;
     font-size: 20px;
-    /* width: 200px; */
     
 }
 .register3 h2{
     font-size: 20px;
+    
+}
+.register3 span{
+    font-size: 18px;
 }
 .register3 input{
     border: none;
-    padding: 11px;
+    padding: 13px;
     width: 300px;
     font-size: 16px;
     background-color: #eee;
-    border: auto 0;
+    margin-top: 20px;
+    
 }
 .register3 button{
     width: 100px ;
@@ -516,9 +524,12 @@
     margin-left: 323px;
     display: inline-block;
     background-color: blue;
+    font-weight: bold;
+    color: white;
+    font-size: 17px;
     position: relative;
     content: "";
-    top: -40px;
+    top: -45px;
     border: none;
 }
 .main-community{
@@ -527,7 +538,7 @@
 .main-community div{
      display: grid;
     grid-template-columns: repeat(2, 2fr);
-    margin: 100px;
+    margin: 80px;
     line-height: 1.5;
     display: inline-block;
     padding: 10px;
@@ -561,8 +572,8 @@
 .community2 h3{
     font-family: 20px;
     margin: 60px;
-    margin-left: -70px;
-    margin-top: -80px;
+    margin-left: -20px;
+    margin-top: -60px;
     width: 350px;
     padding: 15px;
 }
@@ -571,24 +582,36 @@
     content: "";
     width: 0;
     top: -54px;
-    right: 70px;
+    right: 10px;
     margin-top: -10px;
     
 }
-.main-infomation div{
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: 0;
-    margin-right: 0;
-    padding-right: .625rem;
-    padding-left: .625rem;
+.main-contact span{
+   margin-left: 500px;
+   font-size: 13px;
+   position: relative;
+   color: "";
+   top: -65px;
+   width: 10px;
+    
 }
-.main-infomation ul{
-    display: inline-block;
-    padding: 50px;
-    margin: 12px;
-    gap: 20px;
+.main-contact a{
+    margin: 10px;
+     line-height: 1.7;
+     font-size: 12px;
+     color: black;
+      position: relative;
+    content: "";
+    top: -64px;
+    right: -75px;
+    font-weight: normal;
+    
+     
+     
+     
 }
+
+
 
 
 @media screen and (max-width: 765px) {
