--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@
 .main img {
     width: 100%;
     border: 0;
-    overflow-clip-margin: content-box;
     overflow: clip;
     object-fit: cover;
 }
@@ -72,13 +71,13 @@
 }
 .boby-text p {
      width: 740px;
-    font-size: 22px;
+    font-size: 21px;
     line-height: 1.5;
     font-weight: normal;
 }
 
 .student-page {
-    width: 85%;
+    width: 75%;
     position: relative;
     margin: auto 0;
     background-repeat: no-repeat;
@@ -87,48 +86,45 @@
     padding-bottom: 8.33333vw;
     box-sizing: border-box;
 }
+.photo img{
+    width: 600px;
+    top: 0%;
+    
+}
 
 .photo {
-    width: 45.66667vw;
-    height: 41.66667vw;
-    margin-left: 8.33333vw;
+   
     display: inline-block;
-    vertical-align: middle;
     position: relative;
-    z-index: 1;
+   margin-left: 100px;
+   z-index: 1;
+   
 }
 
 .layerbase {
     width: 55.33333vw;
-    height: 55.33333vw;
+    height: 60.33333vw;
     left: 41.66665vw;
     margin: 10px;
     background-color: #FBFFA7;
     position: absolute;
     top: 0%;
-    z-index: 0;
+   
+   
+}
+.lastphoto img{
+   width: 450px;
+   height: 320px;
 }
 
 .lastphoto {
-    width: 5.33333vw;
-    height:25vw;
-    margin-left: 2.33333vw;
     display: inline-block;
-    vertical-align: middle;
     position: relative;
-    z-index: 1;
+    content: "";
+    right: -780px;
+    bottom: 500px;
+   
 }
-
-.layerbase div {
-    display: block;
-    unicode-bidi: isolate;
-}
-
-.photo div {
-    display: block;
-    unicode-bidi: isolate;
-}
-
 .text-boby {
     display: flex;
     flex-direction: column;
@@ -137,9 +133,9 @@
     width: 56.66667vw;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 100px; 
+    margin-top: 50px; 
     gap: 20px;
-   margin-bottom: 30px;
+   margin-top: -300px;
 } 
 .text-boby h2 {
      width: 740px;
@@ -149,7 +145,7 @@
 }
 .text-boby p {
      width: 740px;
-    font-size: 22px;
+    font-size: 21px;
     line-height: 1.5;
     font-weight: normal;
     margin-top: 20px;
@@ -172,11 +168,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 66.66667vw;
+    width: 55.66667vw;
     margin-right: auto;
     margin-left: auto;
     margin-top: 100px;
-    gap: 30px;
+    gap: 20px;
     margin-bottom: 30px;
 }
 
@@ -189,7 +185,7 @@
 
 .text-second p {
     width: 640px;
-    font-size: 22px;
+    font-size: 21px;
     line-height: 1.5;
     font-weight: normal;
 
@@ -199,13 +195,14 @@
 
 .triple-images {
     position: relative;
-    margin-bottom: 8.33333vw;
     box-sizing: border-box;
+}
+.second img{
+    width: 450px;
 }
 
 .second {
-    width: 33.33333vw;
-    height: 25vw;
+    height: 100%;
     margin-left: 8.33333vw;
     margin-right: 8.3333vw;
     margin: 150px;
@@ -215,7 +212,9 @@
     position: relative;
     z-index: 1;
 }
-
+.forth img{
+    width: 590px;
+}
 .forth {
     display: inline-block;
     vertical-align: middle;
@@ -223,6 +222,9 @@
     margin-top: -300px;
     z-index: 1;
 
+}
+.third img{
+    width: 450px;
 }
 
 
@@ -241,7 +243,7 @@
 .first {
     width: 58.33333vw;
     margin: 5px;
-    height: 70vw;
+    height: 80vw;
     left: 0;
     position: absolute;
     top: 0;
@@ -249,13 +251,6 @@
     box-sizing: border-box;
     background-color: #B6FFC0;
 }
-
-
-.first div {
-    display: block;
-    unicode-bidi: isolate;
-}
-
 .text2 {
     display: flex;
     flex-direction: column;
@@ -278,7 +273,7 @@
 
 .text2 p {
      width: 740px;
-    font-size: 22px;
+    font-size: 21px;
     line-height: 1.5;
     font-weight: normal;
 }
@@ -297,7 +292,6 @@
     height: 700px;
     max-width: 100%;
     border: 0;
-    overflow-clip-margin: content-box;
     overflow: clip;
 }
 
@@ -323,7 +317,7 @@
 
 .text3 p {
     width: 740px;
-    font-size: 22px;
+    font-size: 21px;
     line-height: 1.5;
     font-weight: normal;
 }
@@ -378,7 +372,7 @@
     width: 66.66667vw;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 300px;
+    margin-top: 200px;
     gap: 30px;
     margin-bottom: 80px;
 }
@@ -391,7 +385,7 @@
 }
 .text4 p {
         width: 740px;
-    font-size: 22px;
+    font-size: 21px;
     line-height: 1.5;
     font-weight: normal;
 }
@@ -427,6 +421,11 @@
     margin-top: 1em;
     color: blue;
     text-decoration: none;
+}
+.jobs img{
+    color: blue;
+    width: 32px;
+    
 }
 
 .main-footer {
@@ -480,6 +479,12 @@
     color: black;
 
 }
+.register1 img{
+    width: 18px;
+}
+.register img{
+    width: 30px;
+}
 .register2{
     display: inline-block;
     margin-top: -30px;
@@ -487,10 +492,12 @@
 }
 .register2 ul{
     line-height: 1.5;
+    list-style: none;
 
 }
 .register2 a{
     color: black;
+    
 }
 .register2 h2{
     font-size: 20px;
@@ -593,6 +600,7 @@
    color: "";
    top: -65px;
    width: 10px;
+   font-weight: 300;
     
 }
 .main-contact a{
@@ -604,7 +612,7 @@
     content: "";
     top: -64px;
     right: -75px;
-    font-weight: normal;
+    
     
      
      
@@ -614,17 +622,5 @@
 
 
 
-@media screen and (max-width: 765px) {
-    body {
-        width: 100%;
-    }
 
-    .link-item{
-        display: none;
-    }
 
-    .container{
-        grid-template-columns: 1fr;
-        gap: 20px;
-    }
-}
