--- a/style.css
+++ b/style.css
@@ -435,10 +435,10 @@
 }
 
 .footer-container {
-     display: grid;
+     /* display: grid;
      grid-template: 1fr,1fr;
     display: inline-block;
-    position: relative;
+    position: relative; */
 }
 .logo {
     width: 179px;
@@ -462,14 +462,12 @@
     
 }
 .register img{
+  
     padding: 2px;
     margin: 2px;
     
 }
 
-.register3{
-    grid-column: 3/ span 3;
-}
 .register1 ul{
     list-style: none;
     line-height: 1.5;
@@ -483,7 +481,7 @@
     width: 18px;
 }
 .register img{
-    width: 30px;
+    width: 20px;
 }
 .register2{
     display: inline-block;
@@ -505,16 +503,16 @@
 }
 .register3{
     line-height: 1.5;
-    margin-top: -30px;
     font-size: 20px;
     
 }
 .register3 h2{
+    margin-top: -70px;
     font-size: 20px;
     
 }
 .register3 span{
-    font-size: 18px;
+    font-size: 17px;
 }
 .register3 input{
     border: none;
@@ -528,15 +526,16 @@
 .register3 button{
     width: 100px ;
     padding: 13px;
-    margin-left: 323px;
+    margin-left: 300px;
     display: inline-block;
     background-color: blue;
+    margin-top: 60px;
     font-weight: bold;
     color: white;
     font-size: 17px;
     position: relative;
     content: "";
-    top: -45px;
+    top: 75px;
     border: none;
 }
 .main-community{
@@ -544,31 +543,27 @@
 }
 .main-community div{
      display: grid;
-    grid-template-columns: repeat(2, 2fr);
+    grid-template-columns: repeat(2, 1fr);
     margin: 80px;
     line-height: 1.5;
     display: inline-block;
     padding: 10px;
-    margin-top: -5px;
-}
-.community1 li{
-    list-style: none;
-    
+    margin-top: -35px;
 }
 .community1 a{
     color: black;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 20px;  
 }
 #Language{
-    width: 100px;
+    width:150px;
     padding: 7PX;
      background-color: #eee;
      border: none;
      display: inline-block;
 }  
 #Location{
-    width: 200PX;
+    width: 150PX;
     padding: 7PX;
      background-color: #eee;
      border: none;
@@ -581,7 +576,6 @@
     margin: 60px;
     margin-left: -20px;
     margin-top: -60px;
-    width: 350px;
     padding: 15px;
 }
 .community2 select{
@@ -594,29 +588,21 @@
     
 }
 .main-contact span{
-   margin-left: 500px;
-   font-size: 13px;
-   position: relative;
-   color: "";
-   top: -65px;
-   width: 10px;
+    margin-left: 470px;
+    display: flex;
+    justify-content: end;
+   font-size: 11px;
    font-weight: 300;
     
 }
-.main-contact a{
+.main-contact {
+    display: flex;
+    flex-direction: row;
     margin: 10px;
      line-height: 1.7;
      font-size: 12px;
      color: black;
-      position: relative;
-    content: "";
-    top: -64px;
-    right: -75px;
     
-    
-     
-     
-     
 }
 
 
